--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity
             android:name=".activity.NewPostActivity"
             android:exported="true"
+            android:windowSoftInputMode="adjustResize"
             android:parentActivityName=".activity.MainActivity"
             android:theme="@style/Theme.Feed_Use.ActionBar" />
         <activity
