--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,5 +82,5 @@ dependencies {
     //CIRCLE IMAGE VIEW
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation"org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
 }
